@@ -3,6 +3,8 @@
 	* ipmi-oem/ipmi-oem-intelnm.c: Fix typo.
 
 	* ipmi-oem/ipmi-oem-intelnm.c: Fix logic error in searching code in various "get" functions.
+
+	* ipmi-oem/ipmi-oem-intelnm.c: Fix logic errors in new command additions.
 	
 2015-10-29 Albert Chu <chu11@llnl.gov>
 
